trunk/Archive2/09/1a887c8aeb7c86/output
main.cpp:10:18: error: 'i' is a private member of 'A'
    void foo() { i = 2; }
                 ^
main.cpp:4:9: note: declared private here
    int i;
        ^
main.cpp:15:7: warning: unused variable 'b' [-Wunused-variable]
    B b;
      ^
1 warning and 1 error generated.
