trunk/Archive2/09/1a887c8aeb7c86/main.cpp
class A
{
private:
    int i;
};

class B : public A
{
public:
    void foo() { i = 2; }
};

int main()
{
    B b;
};